# rpi-radio

./: .gitmodules  Button.cpp  Button.h  CMakeLists.txt  ClockWidget.cpp  ClockWidget.h  Controls.cpp  Controls.h  Encoder.cpp  Encoder.h  GPIO.cpp  GPIO.h  ListWidget.cpp  PlayerWidget.cpp  PlayerWidget.h  README.md  VolumeWidget.cpp  VolumeWidget.h  clock.qml  config.h.in  main.cpp  player.qml  rpi-radio.cpp  rpi-radio.h  rpi-radio.kdev4  rpi-radio.qrc  stations.txt  volume.qml
avr/: main.c  makefile
avr/lib/uartlibrary/: makefile  uart.c
cmake/: FindQtSerialPort.cmake
include/: ClockWidget.h  Controls.h  Encoder.h  ListWidget.h  MpdPlayerWidget.h  PlayerWidget.h  QMenuListItem.h  rpi-radio.h
pcb/: eagle.epf  rpi-radio.brd  rpi-radio.lbr  rpi-radio.pro  rpi-radio.sch
qml/: Browse.qml  Clock.qml  CoverFlow.qml  List.qml  MenuList.qml  MpdPlayer.qml  Player.qml  Playlist.qml  StationList.qml  Stations.qml  Volume.qml  main.qml  qmldir
qml/dummydata/: listEntries.qml  songdata.qml
src/: Button.cpp  Controls.cpp  Encoder.cpp  GPIO.cpp  MpdPlayerWidget.cpp  PlayerWidget.cpp  QMenuListItem.cpp
